Moved UDP Reception out of parser Fixed Bug in Qualifying Laptime of leader Allow data update in visitor mode (no early exit in data processing, when player not present)

--- a/F1RaceBoard/PersonalLeaderboard.xaml
+++ b/F1RaceBoard/PersonalLeaderboard.xaml
@@ -106,6 +106,7 @@
                                     <MultiBinding Converter="{StaticResource DeltaTimeLeaderConverter}">
                                         <Binding Path="TimedeltaToLeader" />
                                         <Binding Path="Status" />
+                                        <Binding Path="FastestLap" />
                                         <Binding Path="" />
                                     </MultiBinding>
                                 </TextBlock.Text>
