Improved mid-session join, by monitoring sessionUID, sessionTime and laphistory data

--- a/F1RaceBoard/PersonalLeaderboard.xaml
+++ b/F1RaceBoard/PersonalLeaderboard.xaml
@@ -170,6 +170,7 @@
                                 <UserControl.Content>
                                     <MultiBinding Converter="{StaticResource TyreConverter}">
                                         <Binding Path="VisualTyres" />
+                                        <Binding Path="VisualTyre" />
                                         <Binding Path="" />
                                     </MultiBinding>
                                 </UserControl.Content>
