issues with fastestlap capture kind of fixed, status view fixed and now displays a finished lap for 5 seconds

--- a/F1RaceBoard/PersonalLeaderboard.xaml
+++ b/F1RaceBoard/PersonalLeaderboard.xaml
@@ -68,7 +68,8 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTextColumn FontFamily="Times New Roman" FontSize="26" Header="Name" Binding="{Binding Name}" Foreground="White"></DataGridTextColumn>
+                <DataGridTextColumn FontFamily="Times New Roman" FontSize="26" Header="Name" Binding="{Binding Name}" Foreground="White">                    
+                </DataGridTextColumn>
                 <DataGridTemplateColumn Header="Leader" Width="150">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
