--- a/F1RaceBoard/App.xaml
+++ b/F1RaceBoard/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="F1SessionDisplay.App"
+﻿<Application x:Class="adjsw.F12023.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:F1SessionDisplay"
+             xmlns:local="clr-namespace:adjsw.F12023"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
