--- a/F1RaceBoard/PersonalLeaderboard.xaml
+++ b/F1RaceBoard/PersonalLeaderboard.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="F1GameSessionDisplay.PersonalLeaderboard"
+﻿<UserControl x:Class="adjsw.F12023.PersonalLeaderboard"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:adjsw.F12022"
-             xmlns:app="clr-namespace:F1GameSessionDisplay"
+             xmlns:app="clr-namespace:adjsw.F12023"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
