--- a/F1RaceBoard/UdpPlaybackWindow.xaml
+++ b/F1RaceBoard/UdpPlaybackWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="F1GameSessionDisplay.UdpPlaybackWindow"
+﻿<Window x:Class="adjsw.F12023.UdpPlaybackWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:F1GameSessionDisplay"
+        xmlns:local="clr-namespace:adjsw.F12023"
         mc:Ignorable="d"
         Topmost="True"
         Title="Udp Playback" 
