--- a/KRF1Timing/MainWindow.xaml
+++ b/KRF1Timing/MainWindow.xaml
@@ -3,11 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:adjsw.F12022"
-        xmlns:localui="clr-namespace:adjsw.F12023"
+        xmlns:local="clr-namespace:adjsw.F12023"
         mc:Ignorable="d"
         Background="#FF383838"
-        Title="t.b.d. src" Height="450" Width="800" KeyDown="OnKeyDown" x:Name="wnd" x:FieldModifier="public">
+        Title="t.b.d. src" Height="650" Width="1000" KeyDown="OnKeyDown" x:Name="wnd" x:FieldModifier="public">
     <Window.Resources>
     </Window.Resources>
     <Grid Height="Auto">
@@ -19,7 +18,7 @@
         </Border>
         <DockPanel x:Name="m_dockPanel" HorizontalAlignment="Center">
             <local:CarStatusView DockPanel.Dock="Right" Margin="20" Grid.Column="1" x:Name="m_carStatus" HorizontalAlignment="Center" VerticalAlignment="Center"  Width="450"></local:CarStatusView>
-            <localui:PersonalLeaderboard DockPanel.Dock="Left" Grid.Column="0" x:Name="m_grid" Visibility="Collapsed"></localui:PersonalLeaderboard>            
+            <local:PersonalLeaderboard DockPanel.Dock="Left" Grid.Column="0" x:Name="m_grid" Visibility="Collapsed"></local:PersonalLeaderboard>            
         </DockPanel>
     </Grid>
 </Window>
