--- a/KRF1Timing/MainWindow.xaml
+++ b/KRF1Timing/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:adjsw.F12025"
         mc:Ignorable="d"
         Background="#FF383838"
-        Title="t.b.d. src" Height="650" Width="1000" KeyDown="OnKeyDown" x:Name="wnd" x:FieldModifier="public">
+        Title="t.b.d. src" Height="1080" Width="1920" KeyDown="OnKeyDown" x:Name="wnd" x:FieldModifier="public">
     <Window.Resources>
     </Window.Resources>
     <Grid Height="Auto">
@@ -18,7 +18,8 @@
         </Border>
         <DockPanel x:Name="m_dockPanel" HorizontalAlignment="Center" LastChildFill="False">
             <local:CarStatusView DockPanel.Dock="Right" Margin="20" Grid.Column="1" x:Name="m_carStatus" Width="450"></local:CarStatusView>
-            <local:PersonalLeaderboard DockPanel.Dock="Left" Grid.Column="0" x:Name="m_grid" Visibility="Collapsed"></local:PersonalLeaderboard>            
+            <local:PersonalLeaderboard DockPanel.Dock="Left" Grid.Column="0" x:Name="m_grid" Visibility="Collapsed"></local:PersonalLeaderboard>
+            <local:Trackmap DockPanel.Dock="Bottom" x:Name="m_trackmap"></local:Trackmap> 
         </DockPanel>
     </Grid>
 </Window>
