Layout with Canvas is ok for 1280x1024, 1080p, 1440p, 1080x1920

--- a/KRF1Timing/MainWindow.xaml
+++ b/KRF1Timing/MainWindow.xaml
@@ -16,22 +16,10 @@
                 <TextBlock Margin="5" x:Name="m_infoTxt"  Foreground="Black" FontSize="16" FontWeight="Bold">LICENSE</TextBlock>
             </StackPanel>            
         </Border>
-        <Grid x:Name="m_rootGrid" HorizontalAlignment="Center">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="1.0"></RowDefinition>
-                <RowDefinition Height="0.0"></RowDefinition>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="0.8"></ColumnDefinition>
-                <ColumnDefinition Width="0.2"></ColumnDefinition>
-            </Grid.ColumnDefinitions>
+        <Canvas x:Name="m_rootCanvas">
             <local:PersonalLeaderboard x:Name="m_board" Visibility="Collapsed" HorizontalAlignment="Left" HorizontalContentAlignment="Left"></local:PersonalLeaderboard>
-            <Border BorderBrush="Black" BorderThickness="1" x:Name="m_carStatusContainer">
-                <local:CarStatusView Margin="20, 0, 0, 0" x:Name="m_carStatus" Width="450"></local:CarStatusView>
-            </Border>
-            <Border BorderBrush="Black" BorderThickness="1" x:Name="m_trackmapContainer">
-                <local:Trackmap Margin="10, -10, 0, 0" x:Name="m_trackmap"></local:Trackmap>
-            </Border>
-        </Grid>
+            <local:CarStatusView Margin="20, 0, 0, 0" x:Name="m_carStatus" Width="450"></local:CarStatusView>
+            <local:Trackmap Margin="10, -10, 0, 0" x:Name="m_trackmap"></local:Trackmap>                
+        </Canvas>
     </Grid>
 </Window>
