Layout ok for various resolutions using canvas instead of Grid Purple sector support ToDo for 0.9.0: fix time to leader glitch, add interval times

--- a/KRF1Timing/PersonalLeaderboard.xaml
+++ b/KRF1Timing/PersonalLeaderboard.xaml
@@ -136,7 +136,10 @@
                                     <MultiBinding Converter="{StaticResource StatusConverter}">
                                         <Binding Path="TimedeltaToPlayer" />
                                         <Binding Path="CurrentLap" />
-                                        <Binding Path="Status" />
+                                        <Binding Path="Status"/>
+                                        <Binding Path="Session.FastestSector1"/>
+                                        <Binding Path="Session.FastestSector2"/>
+                                        <Binding Path="Session.FastestSector3"/>
                                         <Binding Path=""/>
                                     </MultiBinding>
                                 </app:StatusView.StatusInfo>
